--- a/invoice.toml
+++ b/invoice.toml
@@ -3,30 +3,44 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 invoice-nr = "2023-001"
-date = "24.05.2023"
-vat = 0.19
+# date = ""
+vat = 0
+
+invoice-city = "Sidoarjo"
 
 items = [
-  { description = "The first service provided. The first service provided. The first service provided", price = 200 },
-  { description = "The second service provided", price = 150.2 },
+  { date = "2023-02-03", description = "CLOUDFLARE 188899352 | ...179893", price = 140236.01 },
+  { date = "2023-02-17", description = "CLOUDFLARE 188899352 | ...278307", price = 143346 },
+  { date = "2023-02-18", description = "GOOGLEGSUITE PT AGI.C CC GOOGLE. | ...107205", price = 188045 },
+  { date = "2023-02-28", description = "CLOUDFLARE 188899352 | ...242635", price = 144062 },
+  { date = "2023-02-28", description = "CLOUDFLARE 188899352 | ...247043", price = 144062 },
+  { date = "2023-03-01", description = "Google GSUITE karya machiSG | ...278724", price = 27043 },
+  { date = "2023-03-01", description = "GOOGLEGSUITE PT A 20230218-20230218 | ...76387", price = -188045 },
+  { date = "2023-03-01", description = "GOOGLEGSUITE PT AGI.C CC GOOGLE. | ...300664", price = 27043 },
+  { date = "2023-04-01", description = "Google GSUITE pt robotec.SG | ...217119", price = 35836 },
+  { date = "2023-04-01", description = "Google GSUITE pt agi.com SG | ...221425", price = 61787 },
+  { date = "2023-04-01", description = "Google GSUITE karya machiSG | ...259435", price = 61787 },
+  { date = "2023-05-01", description = "Google GSUITE pt robotec.SG | ...276307", price = 60543 },
+  { date = "2023-05-01", description = "Google GSUITE karya machiSG | ...289695", price = 60543 },
+  { date = "2023-05-01", description = "GOOGLEGSUITE PT AGI.C CC GOOGLE | ...304383", price = 60543 },
+  { date = "2023-06-01", description = "Google GSUITE pt robotec.SG | ...340443", price = 61841 },
+  { date = "2023-06-01", description = "GOOGLEGSUITE KARYA MA CC GOOGLE. | ...346277", price = 61841 },
 ]
 
 [author]
-name = "Kerstin Humm"
-street = "Straße der Privatsphäre und Stille 1"
-zip = "54321"
-city = "Potsdam"
-tax_nr = "12345/67890"
+name = "Moch. Nafkhan Alzamzami"
+street = "Dusun Krajan RT 12/04, Sepande, Candi"
+zip = "61271"
+city = "Sidoarjo"
+tax_nr = ""
 
 [recipient]
-name = "Erika Mustermann"
-street = "Musterallee"
-zip = "12345"
-city = "Musterstadt"
+name = ""
+street = ""
+zip = ""
+city = ""
 
 [bank_account]
-name = "Todd Name"
-bank = "Deutsche Postbank AG"
-iban = "DE 5463 2168 7213 2157 98"
-bic = "PBNKDEFF"
-
+name = "Moch. Nafkhan Alzamzami"
+bank = "BNI"
+number = "1315637060"
