--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-# SPDX-FileCopyrightText: 2023 Kerstin Humm <kerstin@erictapen.name>
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
-
-result*
+/dist
